tests/ui/crablangdoc/renamed-features-crablangdoc_internals.stderr
error[E0557]: feature has been removed
  --> $DIR/renamed-features-crablangdoc_internals.rs:1:12
   |
LL | #![feature(doc_keyword)]
   |            ^^^^^^^^^^^ feature has been removed
   |
   = note: merged into `#![feature(crablangdoc_internals)]`

error[E0557]: feature has been removed
  --> $DIR/renamed-features-crablangdoc_internals.rs:2:12
   |
LL | #![feature(doc_primitive)]
   |            ^^^^^^^^^^^^^ feature has been removed
   |
   = note: merged into `#![feature(crablangdoc_internals)]`

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0557`.
